<resources>
    <string name="app_name">My Event Planner</string>
    <string name="action_settings">Settings</string>

    <string name="submit">submit</string>
    <string name="title">Title</string>
    <string name="hint_event_title">the title of your event</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="venue">Venue</string>
    <string name="hint_venue">input the venue</string>
    <string name="location">Location</string>
    <string name="hint_latitude">latitude of the venue</string>
    <string name="hint_longitude">longitude of the venue</string>
    <string name="note">Note</string>
    <string name="hint_note">input your notes</string>
    <string name="attendees">Attendees</string>
    <string name="add_attendees">Add Attendees</string>
    <string name="delete_event">Delete   Event</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_my_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="default_alarm_timer">Alarm timer</string>
    <string-array name="default_alarm_timer_titles">
        <item>5 minutes</item>
        <item>1 minutes</item>
    </string-array>
    <string-array name="default_alarm_timer_values">
        <item>5</item>
        <item>1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
