<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.linweiran.myeventplanner.view.EditEventActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Add Event"
        android:textStyle="bold"
        android:id="@+id/titleView"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ok_button"
        android:layout_alignParentEnd="true"
        android:background="@drawable/abc_btn_check_to_on_mtrl_015"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/ok_button">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:addStatesFromChildren="false"
        android:columnCount="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/title"
            android:id="@+id/eventTitle"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_edit"
            android:layout_row="0"
            android:layout_column="1"
            android:hint="@string/hint_event_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/start_date"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startDate_edit"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@color/transparent"
            android:textAlignment="gravity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/start_time"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startTime_edit"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/end_date"
            android:layout_row="3"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endDate_edit"
            android:layout_row="3"
            android:layout_column="1"
            android:background="@color/transparent"
            android:textAlignment="gravity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/end_time"
            android:layout_row="4"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endTime_edit"
            android:layout_row="4"
            android:layout_column="1"
            android:background="@color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/venue"
            android:layout_row="5"
            android:layout_column="0" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/venue_edit"/>

            <Button
                android:layout_width="33dp"
                android:layout_height="35dp"
                android:id="@+id/venue_btn"
                android:layout_gravity="center_vertical"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/location"
            android:layout_column="0"
            android:layout_row="6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/latitude_edit"
            android:layout_column="1"
            android:layout_row="6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/longitude_edit"
            android:layout_column="1"
            android:layout_row="7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/note"
            android:layout_column="0"
            android:layout_row="8" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/note_edit"
            android:layout_column="1"
            android:layout_row="8"
            android:hint="@string/hint_note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendees"
            android:layout_row="9"
            android:layout_column="0"/>



    </GridLayout>

    <com.example.linweiran.myeventplanner.view.ExpandListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/attendeesList_edit"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_attendee"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal"
        android:background="@color/transparent"
        android:text="@string/add_attendees"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/blank">

    </TextView>

    <Button
        android:id="@+id/delete_event"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/delete_event"
        android:gravity="center"
        android:layout_width="@dimen/width_delete"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_vertical_margin">
    </TextView>


</LinearLayout>



    </ScrollView>

</RelativeLayout>
